--- a/Testgame/Testgame/Testgame.csproj
+++ b/Testgame/Testgame/Testgame.csproj
@@ -112,10 +112,12 @@
     <Compile Include="Card.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="Drawable.cs" />
+    <Compile Include="Pile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Screen.cs" />
+    <Compile Include="Speed.cs" />
     <Compile Include="Tweener.cs" />
   </ItemGroup>
   <ItemGroup>
