--- a/Testgame/Testgame/Testgame.csproj
+++ b/Testgame/Testgame/Testgame.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Card.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="Drawable.cs" />
+    <Compile Include="Pause.cs" />
     <Compile Include="Pile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
