--- a/Testgame/Testgame/Testgame.csproj
+++ b/Testgame/Testgame/Testgame.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Screen.cs" />
     <Compile Include="Speed.cs" />
+    <Compile Include="Text.cs" />
     <Compile Include="Timer.cs" />
     <Compile Include="Tweener.cs" />
   </ItemGroup>
