--- a/Testgame/Testgame/Testgame.csproj
+++ b/Testgame/Testgame/Testgame.csproj
@@ -113,11 +113,13 @@
     <Compile Include="Card.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="Drawable.cs" />
+    <Compile Include="HumanPlayer.cs" />
     <Compile Include="Instructions.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleEngine.cs" />
     <Compile Include="Pile.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
