--- a/Testgame/Testgame/Testgame.csproj
+++ b/Testgame/Testgame/Testgame.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Button.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Commands.cs" />
+    <Compile Include="ComputerPlayer.cs" />
     <Compile Include="Drawable.cs" />
     <Compile Include="HumanPlayer.cs" />
     <Compile Include="Instructions.cs" />
