--- a/Testgame/Testgame/Testgame.csproj
+++ b/Testgame/Testgame/Testgame.csproj
@@ -116,9 +116,9 @@
     <Compile Include="ComputerPlayer.cs" />
     <Compile Include="Drawable.cs" />
     <Compile Include="HumanPlayer.cs" />
-    <Compile Include="Instructions.cs" />
+    <Compile Include="Menus\Instructions.cs" />
     <Compile Include="Levels.cs" />
-    <Compile Include="Menu.cs" />
+    <Compile Include="Menus\Menu.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleEngine.cs" />
     <Compile Include="Pile.cs" />
@@ -128,10 +128,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Screen.cs" />
-    <Compile Include="Settings.cs" />
+    <Compile Include="Menus\Settings.cs" />
     <Compile Include="Speed.cs" />
     <Compile Include="Spritefont.cs" />
-    <Compile Include="Switch.cs" />
+    <Compile Include="Menus\Switch.cs" />
     <Compile Include="Text.cs" />
     <Compile Include="Timer.cs" />
     <Compile Include="Tweener.cs" />
@@ -172,6 +172,9 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
