--- a/Testgame/Testgame/Xbox 360 Copy (2) of Testgame.csproj
+++ b/Testgame/Testgame/Xbox 360 Copy (2) of Testgame.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{1742dc55-55d3-43ab-a228-e2d5ed02205a}</ProjectGuid>
+    <ProjectGuid>{1742DC55-55D3-43AB-A228-E2D5ED02205A}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">Xbox 360</Platform>
@@ -73,9 +73,11 @@
     <Compile Include="ComputerPlayer.cs" />
     <Compile Include="Drawable.cs" />
     <Compile Include="HumanPlayer.cs" />
-    <Compile Include="Instructions.cs" />
     <Compile Include="Levels.cs" />
-    <Compile Include="Menu.cs" />
+    <Compile Include="Menus\Instructions.cs" />
+    <Compile Include="Menus\Menu.cs" />
+    <Compile Include="Menus\Settings.cs" />
+    <Compile Include="Menus\Switch.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleEngine.cs" />
     <Compile Include="Pile.cs" />
@@ -85,10 +87,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Screen.cs" />
-    <Compile Include="Settings.cs" />
     <Compile Include="Speed.cs" />
     <Compile Include="Spritefont.cs" />
-    <Compile Include="Switch.cs" />
     <Compile Include="Text.cs" />
     <Compile Include="Timer.cs" />
     <Compile Include="Tweener.cs" />
@@ -97,7 +97,6 @@
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
       <Visible>False</Visible>
@@ -169,6 +168,9 @@
     <Reference Include="System.Xml.Linq">
       <Private>False</Private>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
